--- a/.github/workflows/pythontests.yml
+++ b/.github/workflows/pythontests.yml
@@ -78,3 +78,59 @@ jobs:
       with:
         env_vars: OS
         name: codecov-pytest-order
+
+  deploy:
+    if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags')
+
+    runs-on: ubuntu-latest
+
+#    needs: [linter, test]
+    needs: [linter]
+
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        path: main
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: "3.8"
+    - name: Install wheel
+      run: |
+        python -m pip install --upgrade pip
+        pip install wheel
+        pip install pytest
+    - name: Build package
+      run: |
+        cd main
+        python setup.py sdist bdist_wheel
+#    - name: Publish package to PyPI
+#      uses: pypa/gh-action-pypi-publish@master
+#      with:
+#        packages_dir: main/dist/
+#        user: __token__
+#        password: ${{ secrets.TEST_PYPI_API_TOKEN_PYTEST_ORDER }}
+#        password: ${{ secrets.PYPI_API_TOKEN_PYTEST_ORDER }}
+#        repository_url: https://test.pypi.org/legacy/
+    - name: Create release docs
+      run: |
+#        sudo apt update
+#        sudo apt-get install python3-sphinx
+        pip install sphinx
+        pip list
+        cd main/docs
+        make html
+    - name: Checkout gh-pages
+      uses: actions/checkout@v2
+      with:
+        ref: gh-pages
+        path: doc
+    - name: Copy and commit changes
+      run: |
+        cp -r main/docs/build/html/* doc/stable
+        cd doc
+        git config user.name "CI Build"
+        git config user.email "pytest_order@gmail.com"
+        git add stable/*
+        git commit -a -m "Release documentation"
+        git push
